Small fixes proposed by professor Edson

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -25,7 +25,8 @@ year = {2000}
 @article{alex-biryukov,
   title = {Block Ciphers and Stream Ciphers: The State of the Art},
   author = {Alex Biryukov},
-  address = {Katholieke Universiteit Leuven}
+  address = {Katholieke Universiteit Leuven},
+  Year = {2011}
 }
 
 
