--- a/capitulos/1-introducao.tex
+++ b/capitulos/1-introducao.tex
@@ -1,7 +1,7 @@
 \chapter{Introdução}
 \label{introduction}
 
-Desde tempos remotos, segredos sempre existiram e métodos para deixá-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando descobri-los. ~\cite{alexander-maximov} %ok
+Desde tempos remotos, segredos sempre existiram e métodos para deixá-los indecifráveis foram construídos. Enquanto algumas pessoas estavam escondendo informações, outras curiosas estavam tentando descobri-los ~\cite{alexander-maximov}. %ok
 
 Na constante luta entre manter e quebrar segredos, métodos foram desenvolvidos para se esconder informações e falhas nesses métodos foram exploradas para se obter as informações. 
 
@@ -22,12 +22,9 @@ Esse trabalho visa apresentar um algoritmo de criptografia que dificulte a anál
 \label{specifics-objectives}
 
 \begin{itemize}
-	\item Identificar e estudar as principais formas de criptografia.
-	\item Identificar e estudar as principais formas de criptoanálise.
-	\item Identificar e estudar geradores de números pseudo-aleatórios.
 	\item Realizar a proposta de algoritmo.
 	\item Implementar o algoritmo proposto.
-	\item Realizar experimentos afim de compará-los com resultados de outros algoritmos conhecidos.
+	\item Realizar experimentos, voltados para a análise de desempenho, afim de compará-los com resultados do algoritmo RC4.
 \end{itemize}
 
 \section{Organização do Trabalho}
@@ -35,14 +32,14 @@ Esse trabalho visa apresentar um algoritmo de criptografia que dificulte a anál
 
 Este trabalho tem a seguinte organização:
 
-No capítulo \ref{cryptograhy} são apresentados os principais tipos de algoritmos criptográficos, incluindo suas descrições e exemplos, assim como são descritos métodos de criptoanálise.
+No Capítulo \ref{cryptograhy} são apresentados os principais tipos de algoritmos criptográficos, incluindo suas descrições e exemplos, assim como são descritos métodos de criptoanálise.
 
-No capitulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicada a importância desses geradores para a criptografia. 
+No Capítulo \ref{pseudo-random-number-generator} é descrito o que é um gerador de números pseudo-aleatórios, alguns exemplos e suas implementações e é explicada a importância desses geradores para a criptografia. 
 
-No capitulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
+No Capítulo \ref{algorithm-proposition} é explicada a proposta do algoritmo com suas soluções, seu funcionamento e as principais vantagens em relação a outros algoritmos.
 
-No capítulo \ref{implementation-algorithm} é explicado como foi feito a implementação com a arquitetura que foi utilizada e os passos para utilizar o algoritmo.
+No Capítulo \ref{implementation-algorithm} é explicado como foi feito a implementação com a arquitetura que foi utilizada e os passos para utilizar o algoritmo.
 
-No capítulo \ref{results} é explicado os experimentos realizados e como foi feita a coleta de dados desses experimentos. 
+No Capítulo \ref{results} é explicado os experimentos realizados e como foi feita a coleta de dados desses experimentos. 
 
-No capitulo \ref{conclusion} é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
+No Capítulo \ref{conclusion} é apresentada a conclusão deste trabalho, a descrição dos trabalhos futuros e suas importâncias.
